syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./;ova_method_api";

package ova.method.api;

message MethodIdRequest {
  uint64 id = 1;
}

message CreateMethodRequest {
  uint64 user_id = 1;
  string value   = 2;
}

message MethodListRequest {
  uint64 limit  = 1;
  uint64 offset = 2;
}

message MethodItem {
  uint64 id         = 1;
  uint64 user_id    = 2;
  string value      = 3;
  int64  created_at = 4;
}

message MethodList {
  repeated MethodItem methods = 1;
}

message MethodInfo {
  string info = 1;
}

service OvaMethodApi {
  rpc Create (CreateMethodRequest) returns (google.protobuf.Empty) {}
  rpc Remove (MethodIdRequest) returns (google.protobuf.Empty) {}
  rpc Describe (MethodIdRequest) returns (MethodInfo) {}
  rpc List (MethodListRequest) returns (MethodList) {}
}
